@@ -24,6 +24,10 @@
    */
 #import <Foundation/NSObject.h>
 
+#if !defined (GNUSTEP) &&  (MAC_OS_X_VERSION_MAX_ALLOWED <= MAC_OS_X_VERSION_10_4)
+#define NSUInteger unsigned int
+#endif
+
 @class GSLinkedList;
 
 /** GSListLink provides simple doubly linked list functionality to
