@@ -30,6 +30,10 @@
 #import "GSSkipMutableArray.h"
 #import "GSIndexedSkipList.h"
 
+#if !defined (GNUSTEP) &&  (MAC_OS_X_VERSION_MAX_ALLOWED <= MAC_OS_X_VERSION_10_4)
+#define NSUInteger unsigned int
+#endif
+
 static Class	abstractClass = 0;
 static Class	concreteClass = 0;
 
